[package]
name = "geoiplocation"
version = "0.1.0"
edition = "2021"
authors = ["sn99 <siddharthn.099@gmail.com>"]
description = "Get location based on IP"
keywords = ["location", "ip"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
tokio = {version="1.19.2", features =["full"]}
serde = {version="1.0.137", features = ["derive"]}

[env]
LOCATION_API_URL = "https://www.loc.subcom.link/api/v1/iplocation"